objects/ASI_CRM_Sales_Target__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_Gross_Sales_Value__c</fullName>
        <label>Gross Sales (Value)</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_No_of_New_Outlet__c</fullName>
        <label>No. of New Outlet</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Sales_Target_9L__c</fullName>
        <label>Sales Target (9L)</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Sales__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ASI_CRM_STtoUser</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Sub_brand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sub-brand</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>CN Sales Target</value>
            </filterItems>
            <filterItems>
                <field>ASI_MFM_Sub_brand__c.ASI_MFM_Active_for_CRM__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>ASI_MFM_Sub_brand__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>CN FOC Sub-brand</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ASI_MFM_Sub_brand__c</referenceTo>
        <relationshipLabel>Sales Targets</relationshipLabel>
        <relationshipName>ASI_CRM_STtoSB</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Target_Date__c</fullName>
        <label>Target Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Version__c</fullName>
        <label>Version</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Sales Target</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Sub_brand__c</columns>
        <columns>ASI_CRM_Sales__c</columns>
        <columns>ASI_CRM_Gross_Sales_Value__c</columns>
        <columns>ASI_CRM_Target_Date__c</columns>
        <columns>ASI_CRM_Version__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>ST-{00000000}</displayFormat>
        <label>Sales Target ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Targets</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_CN_Sales_Target</fullName>
        <active>true</active>
        <label>CN Sales Target</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>